...
                    app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    app:title="Rooms"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_rooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:scrollbars="vertical"/>

    </LinearLayout>
...
